feat: 릴리즈매니저 리소스 파일 경로 src/main/resources -> data로 변경, 프로젝트 온보딩 기능 추가